# kriti-lang

./: .ghci  .gitignore  CHANGELOG.md  Main.hs  README.md  cabal.project  cabal.project.freeze  flake.nix  go-basic.cabal  grammar.bnf  kriti-lang.cabal  lexer.x  parser.hs  parser.info  parser.y  scripts.nix
.github/workflows/: haskell.yml
RFCs/: DefaultingOperator.md  ExtendOperatorAvailability.md  FunctionEnvironment.md  NullishOperator.md  OptionalChaining.md
app/: Main.hs  Repl.hs
bench/: Benchmark.hs
ci/: 8.10.7.project  8.10.7.project.freeze  9.0.1.project  9.0.1.project.freeze  9.0.2.project  9.0.2.project.freeze  9.2.2.project  9.2.4.project  9.2.4.project.freeze
examples/: Example.hs  README.md  source.json
repl/: Main.hs
src/: GoBasic.hs  Kriti.hs
src/GoBasic/: Eval.hs  Lexer.hs  Parser.hs
src/Kriti/: CustomFunctions.hs  Error.hs  Eval.hs  Lexer.hs  Lexer.x  Parser.hs  Parser.y  ParserJson.hs  ParserOld.hs
src/Kriti/Aeson/: Compat.hs  Pretty.hs
src/Kriti/Lexer/: Token.hs
src/Kriti/Parser/: Grammar.hs  Grammar.info  Grammar.y  GrammarData.hs  Lexer.hs  Lexer.x  Monad.hs  Spans.hs  Token.hs
src/Text/Read/Lex/: Extended.hs
test/: Spec.hs
test/data/: example1
test/data/eval-tests/golden-files/: example1.go-basic.golden  example2.go-basic.golden  example3.go-basic.golden  example4.go-basic.golden  example5.go-basic.golden  example6.go-basic.golden  example7.go-basic.golden
test/data/eval/success/examples/: example10.kriti  example12.kriti  example16.kriti  example17.kriti  example19.kriti  example20.kriti  example22.kriti  example23.kriti  example24.kriti  example25.kriti  example26.kriti  example27.kriti  example9.kriti
test/data/eval/success/golden/: example10.json  example12.json  example19.json  example29.json  example31.json  example4.json
test/data/parser-tests/: example1.json.golden  example2.json  example3.go-basic  example4.go-basic  example5.go-basic  example6.go-basic  example9.go-basic
test/data/parser/examples/: example10.go-basic  example3.go-basic  success3.go-basic  success7.go-basic
test/data/parser/failure/actual/: example1.txt  example2.txt  example3.txt  numAsKey.txt
test/data/parser/failure/examples/: example3.json
test/data/parser/failure/golden/: example1.txt  example2.txt  missingClosingBracket.txt  numAsKey.txt  trailingCommaInArray.txt
test/data/parser/golden/: example1.txt  example10.txt  example3.txt  example4.txt  example5.txt  example6.txt  example7.txt  example8.txt  example9.txt  success10.go-basic.txt  success6.go-basic.txt  success8.go-basic.txt
test/data/parser/success/examples/: customFunctions.kriti  example1.json  example10.go-basic  example11.kriti  example12.kriti  example13.kriti  example14.kriti  example16.kriti  example8.go-basic  functions.kriti  ifStatements.kriti  operators.kriti  pathLookups.kriti  ranges.kriti
test/data/parser/success/golden/: customFunctions.txt  example1.txt  example10.txt  example11.txt  example12.txt  example13.txt  example14.txt  example15.txt  example16.txt  example17.txt  example2.txt  example3.txt  example4.txt  example5.txt  example6.txt  example7.txt  example8.txt  example9.txt  functions.txt  ifStatements.txt  operators.txt  pathLookups.txt  ranges.txt  richExample1.txt  richExample2.txt  richExample3.txt  richExample4.txt  richExample5.txt  stringTemplates.txt  vanillaJson.txt
