cabal-version:       3.0
name:                kriti-lang
version:             0.2.1
copyright:           2021 Hasura Systems Private Limited
author:              Solomon Bothwell
maintainer:          solomon@hasura.io
license:             Apache-2.0
license-file:        LICENSE
category:            Compiler
build-type:          Simple
extra-source-files:  CHANGELOG.md
tested-with:         GHC ==8.10.7

-------------------------------------------------------------------------------

-- Settings shared between all components.
common common-settings
  default-language:    Haskell2010
  default-extensions:
    BlockArguments
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    InstanceSigs
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    RecordWildCards
    TupleSections
    DerivingVia
    TypeApplications
    TypeFamilies

  ghc-options:
    -Wall
    -Wcpp-undef
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Werror=missing-home-modules

common common-libraries
  build-depends:
    , base >= 2 && < 5
    , aeson < 1.6
    , bytestring
    , text
    , optparse-applicative

-------------------------------------------------------------------------------

library
  import:
    , common-libraries
    , common-settings

  hs-source-dirs: src
  build-depends:
    , alex
    , happy
    , lens
    , megaparsec
    , mtl
    , network-uri
    , parser-combinators == 1.3.0
    , scientific
    , unordered-containers
    , vector
  exposed-modules:
    Kriti
    Kriti.Error
    Kriti.Lexer
    Kriti.Lexer.Token
    Kriti.Parser
    Kriti.Eval
  other-modules:
    Paths_kriti_lang
    Text.Read.Lex.Extended

-------------------------------------------------------------------------------

test-suite kriti-lang-test
  import:
    , common-libraries
    , common-settings

  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs

  build-depends:
    , kriti-lang
    , aeson-pretty
    , directory
    , filepath
    , generic-arbitrary
    , hspec
    , hspec-core
    , hspec-golden
    , parsec
    , pretty-simple
    , raw-strings-qq
    , QuickCheck
    , safe-exceptions
    , scientific
    , unordered-containers
    , utf8-string
    , vector

-------------------------------------------------------------------------------

executable kriti
  import:
    , common-libraries
    , common-settings

  main-is: Main.hs
  build-depends:
    , kriti-lang
