cabal-version:       3.0
name:                kriti-lang
version:             0.2.2
copyright:           2021 Hasura Systems Private Limited
author:              Solomon Bothwell
maintainer:          solomon@hasura.io
license:             Apache-2.0
license-file:        LICENSE
category:            Compiler
build-type:          Simple
extra-source-files:  CHANGELOG.md
tested-with:         GHC ==8.10.7

-------------------------------------------------------------------------------

-- Settings shared between all components.
common common-settings
  default-language:    Haskell2010
  default-extensions:
    BlockArguments
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    StrictData
    RecordWildCards
    TupleSections
    DerivingVia
    TypeApplications
    TypeFamilies

  ghc-options:
    -Wall
    -Wcpp-undef
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Werror=missing-home-modules

common common-libraries
  build-depends:
    , base >= 2 && < 5
    , aeson <1.6 || >=2 && <2.1
    , bytestring
    , containers
    , text
    , utf8-string
    , optparse-applicative
    , prettyprinter
    , transformers-compat

-------------------------------------------------------------------------------

library
  import:
    , common-libraries
    , common-settings

  hs-source-dirs: src
  build-depends:
    , array
    , data-fix
    , lens
    , megaparsec
    , mtl
    , network-uri
    , parser-combinators == 1.3.0
    , scientific
    , semialign
    , these
    , unordered-containers
    , vector
  build-tool-depends:
    , alex:alex >= 3.2.6
    , happy:happy >= 1.20
  exposed-modules:
    Kriti
    Kriti.Aeson.Compat
    Kriti.Error
    Kriti.Parser
    Kriti.Parser.Grammar
    Kriti.Parser.Lexer
    Kriti.Parser.Monad
    Kriti.Parser.Spans
    Kriti.Parser.Token
    Kriti.Eval
  other-modules:
    Paths_kriti_lang

-------------------------------------------------------------------------------

test-suite kriti-lang-test
  import:
    , common-libraries
    , common-settings

  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs

  build-depends:
    , kriti-lang
    , aeson-pretty
    , directory
    , filepath
    , generic-arbitrary
    , hspec
    , hspec-core
    , hspec-golden
    , lens
    , lens-aeson
    , mtl
    , parsec
    , pretty-simple
    , prettyprinter
    , raw-strings-qq
    , QuickCheck
    , semialign
    , safe-exceptions
    , scientific
    , unordered-containers
    , utf8-string
    , vector

-------------------------------------------------------------------------------

executable kriti
  import:
    , common-libraries
    , common-settings

  main-is: Main.hs
  build-depends:
    , kriti-lang
    , mtl
